Added caught of exception for transformation algorithm.

--- a/mrVision/testimages/calibration.cfg
+++ b/mrVision/testimages/calibration.cfg
@@ -26,85 +26,86 @@ NNNI-1
 I-1
 I0
 tbI00
-S'\xef\xc2J\xcaO3\x11\xc0\xcd\xf1V\xc0n\xb8<@\xb8\xd8\xb12\xb3\\\xb0?\xc0\xaa\xe0\x12\xff\x01\x85\xbf\xab_\t\x84^\x01a\xc0'
+S'Q\xc0fh%\x02\n\xc0\xb0%\xc1\x0e-\xca.@\xb1\xc0\xd7\xbca\x9c\xab?\x87\xb4\xb0\xaa0\xa8}\xbf\xd1~\x8b\x8a\x8f\x01H\xc0'
 tbsS'squareSize'
 p8
 S'1.0'
 p9
 sS'cropBorderLR'
 p10
-S'240'
+S'250'
 p11
 sS'calibFrames'
 p12
-S'5'
+S'3'
 sS'cropmanual'
 p13
 I01
 sS'patternY'
 p14
-S'12'
+S'32'
 p15
 sS'patternX'
 p16
-S'9'
-sS'cropBorder'
+S'24'
 p17
-S'10'
+sS'cropBorder'
 p18
-sS'corners'
+S'10'
 p19
-(lp20
+sS'corners'
+p20
+(lp21
 (cnumpy.core.multiarray
 scalar
-p21
+p22
 (g6
 (S'f4'
 I0
 I1
-tRp22
+tRp23
 (I3
 S'<'
 NNNI-1
 I-1
 I0
-tbS'%\x0c\xeaB'
-tRp23
-g21
-(g22
-S'^haD'
+tbS'\xd9\x16|B'
 tRp24
-tp25
-a(g21
-(g22
-S'\x9a\xa5\xd5B'
-tRp26
-g21
-(g22
-S'N\x1e"D'
+g22
+(g23
+S'y\xcfnD'
+tRp25
+tp26
+a(g22
+(g23
+S'>\xf4\x85B'
 tRp27
-tp28
+g22
+(g23
+S'm\xaf.D'
+tRp28
+tp29
 asS'camera_matrix'
-p29
+p30
 g3
 (g4
 (I0
 tS'b'
-tRp30
+tRp31
 (I1
 (I3
 I3
 tg7
 I00
-S'\t\xb2\xf3\n\x8c\x00\x9e@\x00\x00\x00\x00\x00\x00\x00\x00_\xc7\xbd\xb2_\x8d\x80@\x00\x00\x00\x00\x00\x00\x00\x00Pg\xc7\xec;E\x9d@\xd7\x03F\xb5\r^t@\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xf0?'
+S'\ro\x99\x10\x1cX\x9a@\x00\x00\x00\x00\x00\x00\x00\x00o\xfc<\xbe\xa2\x8d\x80@\x00\x00\x00\x00\x00\x00\x00\x00\x91T8aY\xba\x99@\xe4}:\x15+ct@\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\xf0?'
 tbsS'cropauto:'
-p31
+p32
 I00
 sS'calibrated'
-p32
+p33
 I01
 sS'cropBorderTB'
-p33
-S'175'
 p34
+S'175'
+p35
 s.
