Updated network protocol an auth.

--- a/mrVision/src/config.ini
+++ b/mrVision/src/config.ini
@@ -1,7 +1,8 @@
 [NETWORK]
-serverIP:			127.0.0.1
+serverIP:			192.168.178.22
 serverPort:			9050
 timeout:			30.0
 
 [GENERAL]
+moduleName:			mrVision
 logLevel:			debug
