Restructured project packages. Added automatic loading of config files for transformation and distortion. Added mrLogger log messages. Updated GUI status function to queue status messages.

--- a/mrVision/src/config.ini
+++ b/mrVision/src/config.ini
@@ -6,3 +6,7 @@ timeout:			0.5
 [GENERAL]
 moduleName:			mrVision
 logLevel:			debug
+
+[CONFIGURATION]
+cfgTransformation:	transform.cfg
+cfgCalibration:		config.cfg
